Importing Google Play app listing files, and added Google Play link to home page.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: default
         <br class="spacer"/>
         <br class="spacer"/>
 
-        <a target="_blank" class="button" href="#"><img src="../img/google_play.svg" class="action-icon"/></a>
+        <a target="_blank" class="button" href="https://play.google.com/store/apps/details?id=com.thehoick.evergreenflixq"><img src="../img/google_play.svg" class="action-icon"/></a>
 
         <br class="spacer"/>
         <br class="spacer"/>
